--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <img class="img-fluid" src="img/marca.png" alt=""></a>
+        <img class="img-fluid" src="img/marca.png" alt="logo" width="214" height="120"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -60,24 +60,44 @@
       </div>
     </nav>
 
-    <header  class="masthead text-center text-white d-flex" >
+    <header  class="masthead text-center text-white d-flex " >
       <div class="container my-auto">
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>Estás pensando en digitalizar tu empresa</strong>
+              <strong></strong>
             </h1>
-            <hr>
+            <!-- <hr> -->
           </div>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">Te ayudamos a introducir nuevas tecnologías a los procesos críticos de tu empresa. Control y monitoreo on-line de tu negocio. </p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Conocer más</a>
+            <p class="text-faded mb-5">Productos de calidad en madera. </p>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Bienvenido...</a>
           </div>
         </div>
       </div>
     </header>
 
-    <section class="bg-primary" id="about">
+    <section class="bg-secondary " id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
