--- a/index.html
+++ b/index.html
@@ -291,6 +291,40 @@
               </div> -->
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 text-center">
+            <div class="service-box mt-5 mx-auto">
+              <!-- <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i> -->
+              <img class="card-img-top" src="img/producto11.jpg" alt="Card image cap">
+              <!-- <div class="card-body">
+                <h5 class="mb-3">Foco de Área LED</h5>
+                <p class="text-muted mb-0">Sistema de Iluminación Led para uso en áreas de trabajo complicadas, como faenas mineras, astilleros, áreas con peligro de explosión.</p>
+              </div> -->
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 text-center">
+            <div class="service-box mt-5 mx-auto">
+              <!-- <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i> -->
+              <img class="card-img-top" src="img/producto12.jpg" alt="Card image cap">
+              <!-- <div class="card-body">
+                <h5 class="mb-3">Foco de Área LED</h5>
+                <p class="text-muted mb-0">Sistema de Iluminación Led para uso en áreas de trabajo complicadas, como faenas mineras, astilleros, áreas con peligro de explosión.</p>
+              </div> -->
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-md-6 text-center">
+            <div class="service-box mt-5 mx-auto">
+              <!-- <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i> -->
+              <img class="card-img-top" src="img/producto13.jpg" alt="Card image cap">
+              <!-- <div class="card-body">
+                <h5 class="mb-3">Foco de Área LED</h5>
+                <p class="text-muted mb-0">Sistema de Iluminación Led para uso en áreas de trabajo complicadas, como faenas mineras, astilleros, áreas con peligro de explosión.</p>
+              </div> -->
+            </div>
+          </div>
         </div>
       </div>
        
@@ -369,8 +403,8 @@
           </div>
 
           <div class="col-lg-3 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/portafolio5.jpeg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/portafolio5.jpeg" alt="">
+            <a class="portfolio-box" href="img/portfolio/fullsize/portafolio5.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/portafolio5.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -419,6 +453,22 @@
           <div class="col-lg-3 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/portafolio8.jpg">
               <img class="img-fluid" src="img/portfolio/thumbnails/portafolio8.jpg" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-category text-faded">
+                    Mandala
+                  </div>
+                  <div class="project-name">
+                    OM
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-lg-3 col-sm-6">
+            <a class="portfolio-box" href="img/portfolio/fullsize/portafolio9.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/portafolio9.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
